--- a/graphics/css/GBA_1p.css
+++ b/graphics/css/GBA_1p.css
@@ -15,13 +15,42 @@
 	font-size: 20pt;
 }
 
+/* Commentator name and pronouns panel. */
+.comms-container {
+	position: absolute;
+	display: flex;
+	font-size: 20pt;
+	width: 412px;
+	height: 65px;
+	line-height: 65px;
+	
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.comms-pronouns {
+	font-size: 20pt;
+}
+
+/* Comms 1 info position. */
+#comms-container1 {
+	left: 15px;
+	top: 445px;
+}
+
+/* Comms 2 info position. */
+#comms-container2 {
+	left: 15px;
+	top: 512px;
+}
+
 /* Game name panel. */
 #game-name {
 	width: 402px;
-	height: 95px;
-	line-height: 95px;
+	height: 93px;
+	line-height: 93px;
 	left: 15px;
-	top: 602px;
+	top: 752px;
 	
 	padding-left: 10px;
 	padding-right: 10px;
@@ -33,7 +62,7 @@
 	height: 40px;
 	line-height: 40px;
 	left: 15px;
-	top: 694px;
+	top: 844px;
 	
 	padding-left: 10px;
 	padding-right: 10px;
@@ -45,7 +74,7 @@
 	height: 95px;
 	line-height: 95px;
 	left: 15px;
-	top: 446px;
+	top: 594px;
 
 	padding-left: 10px;
 	padding-right: 10px;
@@ -57,5 +86,5 @@
 #estimate-container {
 	position: absolute;
 	left: 15px;
-	top: 543px;
+	top: 691px;
 }
