--- a/graphics/css/GBA_2p.css
+++ b/graphics/css/GBA_2p.css
@@ -1,8 +1,8 @@
 /* Runner and pronouns panel. */
-.runner-container {
-	width: 827px;
-	height: 80px;
-	line-height: 80px;
+.runner-container, .comms-container {
+	width: 483px;
+	height: 74px;
+	line-height: 74px;
 	
 	padding-left: 10px;
 	padding-right: 10px;
@@ -16,23 +16,40 @@
 
 /* Player 1 info position. */
 #runner-container1 {
-	left: 536px;
+	left: 450px;
 	top: 654px;
 }
 
 /* Player 2 info position. */
 #runner-container2 {
-	left: 536px;
-	top: 748px;
+	left: 968px;
+	top: 654px;
+}
+
+/* Commentator name and pronouns panel. */
+.comms-pronouns {
+	font-size: 20pt;
+}
+
+/* Comms 1 info position. */
+#comms-container1 {
+	left: 450px;
+	top: 741px;
+}
+
+/* Comms 2 info position. */
+#comms-container2 {
+	left: 968px;
+	top: 741px;
 }
 
 /* Game name panel. */
 #game-name {
-	width: 612px;
-	height: 90px;
-	line-height: 90px;
-	left: 836px;
-	top: 844px;
+	width: 635px;
+	height: 100px;
+	line-height: 100px;
+	left: 815px;
+	top: 830px;
 	
 	padding-left: 10px;
 	padding-right: 10px;
@@ -40,11 +57,11 @@
 
 /* Category and estimate panel. */
 #info-container {
-	width: 612px;
+	width: 635px;
 	height: 35px;
 	line-height: 35px;
-	left: 836px;
-	top: 934px;
+	left: 815px;
+	top: 932px;
 	
 	padding-left: 10px;
 	padding-right: 10px;
@@ -52,16 +69,17 @@
 
 /* Timer panel. */
 #timer {
-	width: 370px;
-	height: 90px;
-	line-height: 90px;
-	left: 451px;
-	top: 844px;
+	width: 350px;
+	height: 100px;
+	line-height: 100px;
+	left: 450px;
+	top: 830px;
+	font-size: 50pt;
 }
 
 /* Estimate panel. */
 #estimate-container {
 	position: absolute;
-	left: 451px;
-	top: 934px;
+	left: 450px;
+	top: 931px;
 }
