--- a/graphics/css/common.css
+++ b/graphics/css/common.css
@@ -80,6 +80,7 @@ body {
 	float: left;
 	vertical-align: middle;
 	width: 100%;
+	font-size: 20pt;
 }
 
 .comms-pronouns {
@@ -184,6 +185,7 @@ body {
 	/* position: absolute; */
 	float: right;
 	vertical-align: middle;
+	min-width: 150px;
 }
 
 #estimate-label {
