--- a/graphics/css/GBA_1p_IV_Calc.css
+++ b/graphics/css/GBA_1p_IV_Calc.css
@@ -15,6 +15,29 @@
 	font-size: 20pt;
 }
 
+/* Commentator name and pronouns panel. */
+.comms-container {
+	position: absolute;
+	display: flex;
+	font-size: 20pt;
+	width: 412px;
+	height: 49px;
+	line-height: 49px;
+	
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.comms-pronouns {
+	font-size: 20pt;
+}
+
+/* Comms 1 info position. */
+#comms-container1 {
+	left: 15px;
+	top: 915px;
+}
+
 /* Game name panel. */
 #game-name {
 	width: 402px;
